# drf-cas-jwt

./: .env.sample  LICENSE  Makefile  README.rst  make_migrations.py  pytest.ini  requirements.txt  setup.cfg  setup.py
docs/: CLEANUP_TASKS.md  SETTINGS_EXAMPLES.py  TESTS.md
docs/implementations/: 1_0_0_IMPLEMENTATION.md  1_0_1_IMPLEMENTATION.md  1_2_0_IMPLEMENTATION.md
docs/versions/: 0_2_0.md  1_0_0.md
drf_cas_jwt/: admin.py  alerts.py  anomaly.py  apps.py  authentication.py  conftest.py  managers.py  models.py  rate_limit.py  refresh_utils.py  settings.py  tasks.py  tests.py  tests_cleanup.py  views.py
drf_cas_jwt/management/commands/: cleanup_tokens.py
drf_cas_jwt/migrations/: 0001_initial.py  0002_refreshtokenfamily_securityalertrecipient_and_more.py
