[flake8]
ignore = D203, W504, W503
exclude =
    .git,
    .venv,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    settings_*,
    */migrations/*.py,
    **/update_groups.py,
    **/apps.py,
max-complexity = 11
max-line-length = 120

[isort]
profile = black
atomic = true
line_length = 120
multi_line_output = 5
length_sort = True
skip = migrations
       settings
       apps.py
       .venv
       ./src/vertc-cnab

[tool.black]
line-length = 120
exclude =
    .git,
    .venv,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    settings_*,
    */migrations/*.py,
    **/update_groups.py,
    **/apps.py,
    model_factories,

[metadata]
name = drf-cas-jwt
version = 1.2.13
url=https://github.com/vert-capital/drf-cas-jwt
description = A Django app to use JWT with CAS and Django Rest Framework.
long_description = file: README.rst
author = Caio de Faria
author_email = caio.faria@vert-capital.com.com
license = BSD-3-Clause  # Example license
install_requires=[
        "Django~=5.2",
        "setuptools>=65.5.1",
        "django-cas-ng~=5.0.1",
        "djangorestframework-simplejwt~=5.5.1",
        "django-user-agents~=0.4.0",
        "pyyaml~=6.0.3",
        "ua-parser~=0.18",
        "user-agents~=2.2.0",
    ],
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
